--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
