--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "newrelic": "^10.6.2",
     "prom-client": "^14.1.0",
     "uuid": "^9.0.0"
   }
