--- a/todo/todo-app-chart/templates/deployment-todo-api.yaml
+++ b/todo/todo-app-chart/templates/deployment-todo-api.yaml
@@ -23,7 +23,7 @@ spec:
         - name: API_URL
           value: {{ .Values.todoApi.env.API_URL }}
         - name: MYSQL_HOST
-          value: {{ .Values.mysql.host }} 
+          value: {{ .Values.mysql.host | quote }} 
         - name: MYSQL_USER
           value: {{ .Values.mysql.user }}
         - name: MYSQL_PASSWORD
