--- a/todo/todo-app-chart/templates/service-mysql.yaml
+++ b/todo/todo-app-chart/templates/service-mysql.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.mysql.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   clusterIP: "None"
   selector:
