--- a/todo/todo-app-chart/templates/service-todo-api.yaml
+++ b/todo/todo-app-chart/templates/service-todo-api.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.todoApi.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     app: {{ .Values.todoApi.name }}
