--- a/todo/todo-app-chart/templates/statefulset-mysql.yaml
+++ b/todo/todo-app-chart/templates/statefulset-mysql.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ .Values.mysql.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
