--- a/todo/todo-app-chart/templates/todo-api-ingress.yaml
+++ b/todo/todo-app-chart/templates/todo-api-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.todoApi.name }}-ingress
+  namespace: {{ .Release.Namespace }}
   # annotations:
     # nginx.ingress.kubernetes.io/rewrite-target: /api/$1
 spec:
